Views Calendar 6.x
==================

See documentation at http://drupal.org/node/262064.

Version 2.0 dev
=================

- Move the colorpicker js info to the plugin so it isn't loaded everywhere.
- #314682 Add missing url() in jcalendar js code.
- #315955 Translation cleanup.
- Get colorpicker working in the Views UI again. I'm not loading the js in the best place, but at least it works now.
- Get rid of deprecated theme for ical output that is not being used in current code.
- #307544 Get rid of extra line feed at end of ical description and make sure template works correctly.
- #312170 Fix misplaced parenthesis in jCalendar theme.
- #313161 Use date_id as iCal UID to be sure it is unique.
- #303537 Display:relative should be position:relative.
- #313538 Fix color typo in calendar.css.
- #309608, #309253 Get rid of attempt to simplify the navigation query, it is too easily broken. 
- #309391 Now that the Views fatal error for missing display handlers is fixed, add the ical display back.

Version 2.0 rc2
=================

- #301414 Revert http://drupal.org/cvs?commit=133523, wrong way to fix that.
- #308372 Make ical display handlers are removed from views display table when Calendar iCal is disabled.
- Eliminate query for navigation display.
- Calendar ical theme was in the wrong folder, move it to the ical folder.
- #303000 The calendar ical feed was deeply sub-classed and wasn't working right, rewrite it to not require so many other classes.
- #294469 Get rid of redundant timezone conversion that showed dates without timezone conversion in UTC.
- #303999 Correct theme paths for Views themes.
- #304762 Add missing folders for translations.
- Update to new Views2 API. Now requires latest versions of Views and CCK, and files have been re-arranged.
- Replace all include_once() with require_once().
- #301324 Rework calendar date selector to use site short date format.
- Fix css for week number to be sure it stays small in all browsers.

Version 2.0 rc1