@@ -1,0 +1,1 @@
+<p>Views 2 lets you combine a number of 'displays' together in one view, including, potentially, more than one page display. Each page display can be a regular page display, with its own url, or an 'attachment' to another display. Attachments are basically one or more views that all appear at the same url of the page they are attached to, one after the other. So the calendar now creates one display that creates the back/next navigation, and attaches to it a year, month, week, or day display with the calendar for the right period.</p>
