@@ -1,0 +1,23 @@
+; $Id$
+
+[advanced help settings]
+name = calendar
+index name = "Calendar"
+
+[overview]
+title = Overview
+
+[getting-started]
+title = Getting started
+parent = overview
+weight = 1
+
+[settings]
+title = Settings
+parent = overview
+weight = 2
+
+[attachments]
+title = Attachments
+parent = overview
+weight = 3
