@@ -1,0 +1,3 @@
+<h3>Calendar 2.0 for Drupal 6</h3>
+Calendar 2.0 for Drupal 6 entailed a complete rewrite in order work with Views 2. There are a lot of changes from earlier versions, so I strongly suggest you start with the default calendar view provided and add and edit it to get the results you want.
+
