@@ -1,0 +1,7 @@
+<p>Calendar settings are now all done in the view instead of on a separate settings page in the administration area.</p>
+
+<p>See the screenshots below for the place to edit the legend colors.</p>
+
+<p><img src="path:images/calendar_colors.jpg"></p>
+
+<p><img src="path:images/calendar_colors2.jpg"></p>
